# Trustlayer.github.io

./: .gitignore  .vercelignore  Anchor.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json
backend/: README.md
backend/scripts/: run-reward-cycle.js  verify-demo-manifest.js  write-demo-manifest.js
backend/src/: demo-data.js  manifest-hash.js  project-validator.js  reward-engine.js  token-safety-scanner.js
backend/test/: reward-engine.test.js
contracts/: README.md  trustlayer-vault-spec.md
data/: demo-payout-manifest.json
docs/: BUILD_TRACKER.md  dev-toolchain.md  implementation-checklist.md  market-research.md  mvp-spec.md  product-roadmap.md  technical-architecture.md  token-safety-scanner.md  token-safety-standard.md  x-marketing-plan.md
marketing/: README.md  meme-coin-research-and-concepts.md
programs/trustlayer_vault/: Cargo.toml
programs/trustlayer_vault/src/: lib.rs
public/data/: demo-payout-manifest.json  receipts-demo-manifest.json
src/: App.jsx  fee-routing-view-model.js  main.js  main.jsx  overrides.css  receipt-proof-loader.js  receipt-proof-view-model.js  scanner-api-base.js  scanner-client.js  scanner-view-model.js  solana-address-input.js  styles.css
test/: fee-routing-view-model.test.js  receipt-proof-loader.test.js  receipt-proof-view-model.test.js  scanner-api-base.test.js  scanner-client.test.js  scanner-view-model.test.js  solana-address-input.test.js
