[package]
name = "trustlayer_vault"
version = "0.1.0"
description = "Contract-backed vault and payout program for TrustLayer projects"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trustlayer_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
